--- a/index.html
+++ b/index.html
@@ -1,1 +1,173 @@
-Hello World yes
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title></title>
+    <link href="../dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="https://cdn.datatables.net/1.10.8/css/jquery.dataTables.min.css" rel="stylesheet" />
+</head>
+<body>
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Admin Dashboard</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li view="template"><a href="#">Template</a></li>
+                <li view="scheduling"><a href="#scheduling">Scheduling</a></li>
+                <li view="userlist"><a href="#userlist">Userlist</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div id="template" class="tabs container">
+    <form class="form-horizontal">
+        <div class="form-group">
+            <label for="inputEmail" class="control-label col-xs-2">Template Name</label>
+            <div class="col-xs-10">
+                <input type="text" class="form-control" id="inputEmail" placeholder="Template Name">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword" class="control-label col-xs-2">Mailer Type</label>
+            <div class="col-xs-10">
+                <select class="form-control">
+                    <option>myAMCAT</option>
+                    <option>AMCAT</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword" class="control-label col-xs-2">Product</label>
+            <div class="col-xs-10">
+                <select class="form-control">
+                    <option>myAMCAT</option>
+                    <option>AMCAT</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword" class="control-label col-xs-2">Content Type</label>
+            <div class="col-xs-10">
+                <select class="form-control">
+                    <option>Text</option>
+                    <option>HTML</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword" class="control-label col-xs-2">Template</label>
+            <div class="col-xs-10">
+                <ul id="template-tabs" class="nav nav-tabs">
+                    <li class="active"><a href="#email">Email</a></li>
+                    <li><a href="#sms">SMS</a></li>
+                    <li><a href="#notification">Notification</a></li>
+                </ul>
+                <div class="tab-content">
+                    <div id="email" class="tab-pane fade in active">
+                        <div class="tab-content-container">
+                            <div class="form-group">
+                                <label for="inputEmail" class="control-label col-xs-2">Mail Subject</label>
+                                <div class="col-xs-10">
+                                    <input type="text" class="form-control" id="inputEmail" placeholder="Template Name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputEmail" class="control-label col-xs-2">Mail Content</label>
+                                <div class="col-xs-10">
+                                    <textarea id="editor1" rows="10" cols="80"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="sms" class="tab-pane fade">
+                        <div class="tab-content-container">
+                            <div class="form-group">
+                                <label for="inputEmail" class="control-label col-xs-2">SMS Subject</label>
+                                <div class="col-xs-10">
+                                    <input type="text" class="form-control" id="inputEmail" placeholder="Template Name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputEmail" class="control-label col-xs-2">SMS Content</label>
+                                <div class="col-xs-10">
+                                    <textarea id="editor2" rows="10" cols="80"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="notification" class="tab-pane fade">
+                        <div class="tab-content-container">
+                            <div class="form-group">
+                                <label for="inputEmail" class="control-label col-xs-3">Notification Subject</label>
+                                <div class="col-xs-9">
+                                    <input type="text" class="form-control" id="inputEmail" placeholder="Template Name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputEmail" class="control-label col-xs-3">Notification Content</label>
+                                <div class="col-xs-9">
+                                    <textarea id="editor3" rows="10" cols="80"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword" class="control-label col-xs-2">Status</label>
+            <div class="col-xs-10">
+                <div class="radio">
+                    <label><input type="radio" name="optradio">Active</label>
+                    <label><input type="radio" name="optradio">Inactive</label>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-xs-offset-2 col-xs-10">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </div>
+        <table id="example" class="display" cellspacing="0" width="100%">
+            <thead>
+            <tr>
+                <th>First name</th>
+                <th>Last name</th>
+                <th>Position</th>
+                <th>Office</th>
+                <th>Start date</th>
+                <th>Salary</th>
+            </tr>
+            </thead>
+
+            <tfoot>
+            <tr>
+                <th>First name</th>
+                <th>Last name</th>
+                <th>Position</th>
+                <th>Office</th>
+                <th>Start date</th>
+                <th>Salary</th>
+            </tr>
+            </tfoot>
+        </table>
+    </form>
+</div>
+<div id="scheduling" class="tabs container">
+    About
+</div>
+<div id="userlist" class="tabs container">
+    Contact
+</div>
+<script src="../script/jquery.js"></script>
+<script src="../script/bootstrap.js"></script>
+</body>
+</html>
