--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link href="../dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="/styles/bootstrap.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/1.10.8/css/jquery.dataTables.min.css" rel="stylesheet" />
 </head>
 <body>
@@ -167,7 +167,7 @@
 <div id="userlist" class="tabs container">
     Contact
 </div>
-<script src="../script/jquery.js"></script>
-<script src="../script/bootstrap.js"></script>
+<script src="/script/jquery.js"></script>
+<script src="/script/bootstrap.js"></script>
 </body>
 </html>
