--- a/index.html
+++ b/index.html
@@ -168,6 +168,6 @@
     Contact
 </div>
 <script src="/script/jquery.js"></script>
-<script src="/script/bootstrap.js"></script>
+<script src="script/bootstrap.js"></script>
 </body>
 </html>
