--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 </nav>
-<div id="template" class="tabs container scene_element scene_element--fadein">
+<div id="template" class="tabs container scene_element scene_element--fadeinup">
     <form class="form-horizontal">
         <div class="form-group">
             <label for="inputEmail" class="control-label col-xs-2">Template Name</label>
