--- a/userlist.html
+++ b/userlist.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 </nav>
-<div id="userlist" class="tabs container scene_element scene_element--fadein">
+<div id="userlist" class="tabs container scene_element scene_element--fadeinup">
     Contact
 </div>
 </div>
