--- a/scheduling.html
+++ b/scheduling.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 </nav>
-<div id="scheduling" class="tabs container scene_element scene_element--fadein">
+<div id="scheduling" class="tabs container scene_element scene_element--fadeinup">
     About
 </div>
 </div>
